# MUSEROS - src
set(CMAKE_BUILD_TYPE Debug)

# Two subdirectories included

# All Python files should be copied to DESTINATION/resource

#INSTALL(PROGRAMS scripts/museros.sh DESTINATION .
#     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)

INSTALL(DIRECTORY ipython/ DESTINATION resource/ipython
     PATTERN ".*" EXCLUDE
     PATTERN "*.py"
     PATTERN "*.xml"
     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)

INSTALL(DIRECTORY xml/ DESTINATION resource/xml
     PATTERN ".*" EXCLUDE
     PATTERN "./svn" EXCLUDE
     PATTERN "*.TXT" EXCLUDE
     PATTERN "*.sh" EXCLUDE
     PATTERN "*.txt" EXCLUDE
     PATTERN "*.py"
     PATTERN "*.xml"
     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)


